--- a/HealthPRJ/WebContent/resources/register/css/main.css
+++ b/HealthPRJ/WebContent/resources/register/css/main.css
@@ -185,7 +185,7 @@ iframe {
 
 
 .wrap-login100 {
-  width: 560px;
+  width: 70%;
   background: #fff;
   border-radius: 10px;
   position: relative;
