--- a/HealthPRJ/WebContent/resources/cupid/bootstrap/css/bootstrap.css
+++ b/HealthPRJ/WebContent/resources/cupid/bootstrap/css/bootstrap.css
@@ -3332,8 +3332,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .navbar {
   position: relative;
   z-index: 1000;
-  min-height: 50px;
-  margin-bottom: 20px;
+  min-height: 70px;
   border: 1px solid transparent;
 }
 .navbar:before,
@@ -3395,6 +3394,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-collapse {
+  padding-top : 8px;
   max-height: 340px;
   overflow-x: visible;
   padding-right: 15px;
@@ -4131,8 +4131,7 @@ a.list-group-item.active > .badge,
   margin-left: 3px;
 }
 .jumbotron {
-  padding: 30px;
-  margin-bottom: 30px;
+
   font-size: 21px;
   font-weight: 200;
   line-height: 2.1428571435;
